@@ -29,7 +29,7 @@ void CGUIRadioButtonControl::Render()
 
   // ask our infoManager whether we are selected or not...
   if (m_toggleSelect)
-    m_bSelected = !g_infoManager.GetBool(m_toggleSelect, m_dwParentID);
+    m_bSelected = g_infoManager.GetBool(m_toggleSelect, m_dwParentID);
 
   if ( IsSelected() && !IsDisabled() )
   {
